--- a/docs/stories/4.4.custom-brand-comparison.md
+++ b/docs/stories/4.4.custom-brand-comparison.md
@@ -12,11 +12,13 @@ Draft
 
 1. Form with two dropdowns to select Brand A and Brand B
 2. Dropdowns populated with available telco brands from scraped data
-3. "Compare" button triggers custom analysis API call
-4. Loading indicator while analysis generates
-5. Results displayed in analysis results view format
-6. Error handling for failed analysis requests
-7. Form validation prevents selecting same brand twice
+3. "Compare" button triggers custom analysis API call to `/api/analysis/custom` (from Story 3.4)
+4. Loading indicator while analysis generates (analysis can take 2-5 minutes)
+5. Progress message shown during long-running analysis (e.g., "Analysis in progress... This may take up to 5 minutes")
+6. Results displayed in analysis results view format (using AnalysisResults component from Story 4.3)
+7. Error handling for failed analysis requests (timeout, API errors, no data)
+8. Form validation prevents selecting same brand twice
+9. Caching prevents duplicate analysis requests for same brand pair within session
 
 ## Tasks / Subtasks
 
@@ -26,29 +28,36 @@ Draft
   - [ ] Add "Compare" button
   - [ ] Style with Tailwind CSS
 - [ ] Populate brand dropdowns (AC: 2)
+  - [ ] Query: `SELECT DISTINCT source FROM plans ORDER BY source`
   - [ ] Fetch available brands from database
-  - [ ] Query distinct sources from plans table
   - [ ] Populate dropdowns with brand list
 - [ ] Implement comparison trigger (AC: 3)
-  - [ ] Call `/api/analysis/custom` endpoint
-  - [ ] Pass brandA and brandB in request body
-  - [ ] Handle API call
-- [ ] Add loading indicator (AC: 4)
-  - [ ] Show loading state during analysis
+  - [ ] Call `POST /api/analysis/custom` endpoint (from Story 3.4)
+  - [ ] Pass brandA and brandB in request body: `{ brandA: string, brandB: string }`
+  - [ ] Handle API response
+- [ ] Add loading indicator (AC: 4, 5)
+  - [ ] Show loading state during analysis (can take 2-5 minutes)
+  - [ ] Display progress message: "Analysis in progress... This may take up to 5 minutes"
   - [ ] Disable form during loading
-  - [ ] Display appropriate loading message
-- [ ] Display results (AC: 5)
+  - [ ] Show estimated time remaining if possible
+- [ ] Display results (AC: 6)
   - [ ] Use AnalysisResults component from Story 4.3
   - [ ] Pass custom analysis data to component
   - [ ] Display results after analysis completes
-- [ ] Implement error handling (AC: 6)
-  - [ ] Catch API errors
+  - [ ] Check for cached results (analysisResult.cached === true)
+- [ ] Implement error handling (AC: 7)
+  - [ ] Catch API errors (400, 404, 500, 503)
   - [ ] Display error messages to user
-  - [ ] Handle timeout errors
-- [ ] Add form validation (AC: 7)
+  - [ ] Handle timeout errors (analysis >10 minutes)
+  - [ ] Handle "no data" errors (404 - brands not found)
+- [ ] Add form validation (AC: 8)
   - [ ] Prevent selecting same brand twice
   - [ ] Show validation error if same brand selected
   - [ ] Disable compare button if invalid
+- [ ] Implement caching check (AC: 9)
+  - [ ] Check if analysis already exists for brand pair
+  - [ ] Show cached results immediately if available
+  - [ ] Display "cached" indicator to user
 
 ## Dev Notes
 
