--- a/docs/stories/4.5.plan-data-table.md
+++ b/docs/stories/4.5.plan-data-table.md
@@ -16,24 +16,25 @@ Draft
    - Data Allowance
    - Contract Term
    - Extras
-2. Sortable columns (click header to sort)
+2. Sortable columns (click header to sort ascending/descending)
 3. Filter by source (dropdown or checkboxes)
 4. Filter by price range (min/max inputs)
-5. Only latest scrape data shown (historical data not displayed)
-6. Pagination if plan count exceeds reasonable limit (e.g., 50+ plans)
-7. Responsive table layout
+5. Only latest scrape data shown using DISTINCT ON (source, plan_key) pattern from Story 2.1
+6. Pagination if plan count exceeds 100 plans (show 100 per page)
+7. Responsive table layout with horizontal scroll on mobile
+8. Loading state while fetching plan data
 
 ## Tasks / Subtasks
 
 - [ ] Create plan table component (AC: 1)
   - [ ] Create `src/components/dashboard/PlanTable.tsx`
-  - [ ] Fetch latest plans from database
+  - [ ] Query: `SELECT DISTINCT ON (source, plan_key) * FROM plans ORDER BY source, plan_key, scrape_timestamp DESC`
   - [ ] Display in table format with required columns
   - [ ] Style with Tailwind CSS
 - [ ] Implement column sorting (AC: 2)
   - [ ] Add click handlers to column headers
   - [ ] Implement ascending/descending sort
-  - [ ] Visual indicator for sort direction
+  - [ ] Visual indicator for sort direction (up/down arrows)
 - [ ] Implement source filtering (AC: 3)
   - [ ] Add source filter dropdown or checkboxes
   - [ ] Filter plans by selected sources
@@ -43,29 +44,33 @@ Draft
   - [ ] Filter plans within price range
   - [ ] Update table display
 - [ ] Filter latest data only (AC: 5)
-  - [ ] Query only latest scrape timestamp per source
-  - [ ] Exclude historical data from display
+  - [ ] Use DISTINCT ON (source, plan_key) pattern from Story 2.1 database schema
+  - [ ] Query only latest scrape_timestamp per plan
   - [ ] Verify only latest shown
 - [ ] Implement pagination (AC: 6)
-  - [ ] Add pagination controls if plan count > 50
-  - [ ] Implement page navigation
-  - [ ] Display page numbers
+  - [ ] Add pagination controls if plan count > 100
+  - [ ] Show 100 plans per page
+  - [ ] Implement page navigation (Previous/Next + page numbers)
 - [ ] Make responsive (AC: 7)
   - [ ] Ensure table works on desktop
-  - [ ] Handle overflow on smaller screens
+  - [ ] Add horizontal scroll on mobile/tablet
   - [ ] Use Tailwind responsive utilities
+- [ ] Add loading state (AC: 8)
+  - [ ] Show skeleton or spinner while fetching data
+  - [ ] Handle loading state properly
 
 ## Dev Notes
 
 ### Source Tree
 - Plan table component: `src/components/dashboard/PlanTable.tsx`
-- Database queries: `src/lib/db/queries.ts` (to be created)
+- Database schema: Story 2.1 (`plans` table with DISTINCT ON pattern)
 - Plan types: `src/types/plan.ts` (from Story 1.4)
 
 ### Technical Stack
-- React Client Component for interactivity
+- React Client Component for interactivity (sorting, filtering)
 - Tailwind CSS for styling
-- Client-side filtering and sorting
+- Client-side filtering and sorting (consider server-side if performance issues)
+- Database query with DISTINCT ON for latest data
 
 ### Testing
 - Test file location: `tests/integration/components/dashboard/PlanTable.test.tsx` (to be created)
