--- a/docs/stories/4.6.trigger-scrape-dashboard.md
+++ b/docs/stories/4.6.trigger-scrape-dashboard.md
@@ -1,76 +1,80 @@
-# Story 4.6: Trigger Scrape from Dashboard
+# Story 4.6: Trigger Scrape from Dashboard (Manual/Cron)
 
 ## Status
 Draft
 
 ## Story
 **As a** user,
-**I want** to manually trigger scraping from the dashboard,
-**so that** I can refresh plan data on demand.
+**I want** to see when the last scrape ran and have instructions to manually trigger scraping,
+**so that** I can refresh plan data on demand without complex job queue infrastructure.
 
 ## Acceptance Criteria
 
-1. "Trigger Scrape" button visible on dashboard home
-2. Button triggers Next.js API endpoint that executes scraping command
-3. Loading indicator shows scraping in progress
-4. Progress updates (if possible) or estimated completion time shown
-5. Success message displays when scraping completes
-6. Dashboard data refreshes to show newly scraped plans
-7. Error handling for scraping failures with descriptive messages
-8. Button disabled while scraping is running (prevent duplicate runs)
+1. Dashboard displays "Last Scrape" timestamp and status
+2. "Refresh Data" section shows instructions: "To update plan data, run: npm run scrape:all"
+3. Button to copy the command to clipboard for convenience
+4. Data freshness indicator (green <24h, yellow 24-48h, red >48h) from Story 4.2
+5. After manual scrape completes, user can refresh dashboard to see new data
+6. Optional: Link to cron setup documentation for automated scheduling
+7. Clean UI with Tailwind CSS styling
+
+**MVP Scope Note:** This story uses manual command execution instead of API-triggered scraping to avoid serverless timeout issues. Scraping runs locally or via cron, not through Next.js API routes.
 
 ## Tasks / Subtasks
 
-- [ ] Add trigger scrape button (AC: 1)
-  - [ ] Add button to dashboard home page
+- [ ] Display last scrape information (AC: 1)
+  - [ ] Query: `SELECT MAX(scrape_timestamp) FROM plans`
+  - [ ] Display timestamp in user-friendly format
+  - [ ] Show status indicator (uses same logic as Story 4.2)
+- [ ] Add refresh instructions section (AC: 2)
+  - [ ] Create "Refresh Data" card/section
+  - [ ] Display instruction text: "To update plan data, run: npm run scrape:all"
   - [ ] Style with Tailwind CSS
-  - [ ] Position appropriately
-- [ ] Create scrape API endpoint (AC: 2)
-  - [ ] Create `src/app/api/scrape/route.ts`
-  - [ ] Import scraping script
-  - [ ] Execute scraping command
-  - [ ] Return response
-- [ ] Implement loading indicator (AC: 3)
-  - [ ] Show loading state when button clicked
-  - [ ] Display loading message
-  - [ ] Disable button during scraping
-- [ ] Add progress updates (AC: 4)
-  - [ ] If possible, stream progress updates
-  - [ ] Or show estimated completion time
-  - [ ] Update UI with progress
-- [ ] Show success message (AC: 5)
-  - [ ] Display success message when scraping completes
-  - [ ] Show scrape results summary
-  - [ ] Clear message after timeout
-- [ ] Refresh dashboard data (AC: 6)
-  - [ ] Refresh plan data after scrape completes
-  - [ ] Update scrape status indicator
-  - [ ] Reload analysis if needed
-- [ ] Implement error handling (AC: 7)
-  - [ ] Catch scraping errors
-  - [ ] Display descriptive error messages
-  - [ ] Log errors appropriately
-- [ ] Prevent duplicate runs (AC: 8)
-  - [ ] Disable button while scraping
-  - [ ] Track scraping state
-  - [ ] Re-enable after completion or error
+- [ ] Add copy-to-clipboard button (AC: 3)
+  - [ ] Add button next to command text
+  - [ ] Implement clipboard copy functionality
+  - [ ] Show success message after copy
+- [ ] Implement data freshness indicator (AC: 4)
+  - [ ] Reuse freshness logic from Story 4.2
+  - [ ] Display green (<24h), yellow (24-48h), red (>48h)
+  - [ ] Calculate hours since last scrape
+- [ ] Add manual refresh note (AC: 5)
+  - [ ] Display message: "After running scrape command, refresh this page to see updated data"
+  - [ ] Add manual refresh button (browser refresh)
+- [ ] Add cron documentation link (AC: 6)
+  - [ ] Create simple cron setup doc (optional)
+  - [ ] Example: `0 2 * * * cd /path/to/project && npm run scrape:all`
+  - [ ] Link to documentation from dashboard
+- [ ] Style UI (AC: 7)
+  - [ ] Use Tailwind CSS for clean design
+  - [ ] Make instructions prominent but not intrusive
+  - [ ] Ensure responsive layout
 
 ## Dev Notes
 
 ### Source Tree
-- Scrape API endpoint: `src/app/api/scrape/route.ts`
-- Scraping script: `src/scripts/scrape.ts` (from Story 2.4)
 - Dashboard page: `src/app/dashboard/page.tsx` (from Story 4.2)
+- Scraping script: `src/scripts/scrape.ts` (from Story 2.4)
+- Database schema: Story 2.1 (`plans` table)
+- Refresh instructions component: `src/components/dashboard/RefreshInstructions.tsx` (to be created)
 
 ### Technical Stack
-- Next.js API routes for scraping trigger
-- Scraping script execution
-- Client-side state management for UI updates
+- React components for UI display
+- Clipboard API for copy-to-clipboard functionality
+- Database queries for scrape timestamp
+- Manual command execution (no API endpoint needed)
+- Optional: Cron setup documentation
+
+### MVP Implementation Note
+This story avoids creating a `/api/scrape` endpoint to sidestep serverless timeout issues (scraping takes 10+ minutes). Instead, users run scraping manually via `npm run scrape:all` or set up a cron job for automated scheduling. This is simpler, more reliable, and avoids job queue infrastructure for MVP.
+
+### Future Enhancement
+Post-MVP, consider adding job queue (BullMQ, Inngest) for in-dashboard scrape triggering with progress updates.
 
 ### Testing
-- Test file location: `tests/integration/api/scrape.test.ts` (to be created)
-- Test framework: Jest
-- Test API endpoint, error handling, button state
+- Test file location: `tests/unit/components/dashboard/RefreshInstructions.test.tsx` (to be created)
+- Test framework: Jest + React Testing Library
+- Test copy-to-clipboard, data display, freshness indicator
 
 ## Change Log
 
